fixed some alignment and issues

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2403,7 +2403,7 @@ textarea {
 @media (max-width: 767.98px) {
   .banner__bg-two {
     min-height: 580px;
-    padding: 120px 0 0px;
+    padding: 69px 0 0px;
   }
 }
 .banner__bg-three {
